@@ -214,6 +214,15 @@ permissions:
    betterTeams.admin.score.remove:
       default: op
       description: gives access to the command /teama score remove
+   betterTeams.admin.money.add:
+      default: op
+      description: gives access to the command /teama money add
+   betterTeams.admin.money.set:
+      default: op
+      description: gives access to the command /teama money set
+   betterTeams.admin.money.remove:
+      default: op
+      description: gives access to the command /teama money remove
    betterTeams.admin.color:
       default: op
       description: gives access to the command /teama color
